[package]
name = "u2d"
version = "0.1.0"
edition = "2021"
license = "GPL"
authors = ["helium18 helium.dev@tuta.io"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.12.0"
reqwest = { version = "0.11.8", features = ["blocking"] }
serde_json = "1.0.74"
serde = {version = "1.0.133", features = ["derive"]}